--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,300italic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <title>Omnifood</title>
    </head>
@@ -208,6 +208,74 @@
                        I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
                        <cite><img src="resources/img/customer-3.jpg" alt="Milton Chapman" class="testimonial-img">&mdash; Milton Chapman</cite>
                    </blockquote>
+               </div>
+           </div>
+       </section>
+       
+       <section class="section-plans">
+           <div class="row">
+               <h2>Start eating healthy today</h2>
+           </div>
+           <div class="row">
+               <div class="col span-1-of-3 plans-box">
+                   <div class="plan-container">
+                       <div>
+                           <h3>Premium</h3>
+                           <p class="plan-price">$399 <span>/ month</span></p>
+                           <p class="price-per-meal">That’s only $13.30 per meal</p>
+                       </div>
+                       <div>
+                           <ul>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                           </ul>
+                       </div>
+                       <div>
+                           <a class="btn btn-full" href="#">Sign up now</a>
+                       </div>
+                   </div>
+               </div>
+               <div class="col span-1-of-3 plans-box">
+                   <div class="plan-container">
+                       <div>
+                           <h3>Pro</h3>
+                           <p class="plan-price">$149 <span>/ month</span></p>
+                           <p class="price-per-meal">That’s only $14.90 per meal</p>
+                       </div>
+                       <div>
+                           <ul>
+                               <li><i class="ion-ios-checkmark-empty icon-small icon-small"></i>1 meal 10 days/month</li>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                           </ul>
+                       </div>
+                       <div>
+                           <a class="btn btn-ghost" href="#">Sign up now</a>
+                       </div>
+                   </div>
+               </div>
+               <div class="col span-1-of-3 plans-box">
+                   <div class="plan-container">
+                       <div>
+                           <h3>Starter</h3>
+                           <p class="plan-price">$19 <span>/ meal</span></p>
+                           <p class="price-per-meal">&nbsp;</p>
+                       </div>
+                       <div>
+                           <ul>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal</li>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>Order from 8 am to 12 pm</li>
+                               <li><i class="ion-ios-close-empty icon-small"></i></li>
+                               <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                           </ul>
+                       </div>
+                       <div>
+                           <a class="btn btn-ghost" href="#">Sign up now</a>
+                       </div>
+                   </div>
                </div>
            </div>
        </section>
