--- a/index.html
+++ b/index.html
@@ -279,6 +279,71 @@
                </div>
            </div>
        </section>
+       
+       <section class="section-form">
+           <div class="row">
+               <h2>We're happy to hear from you</h2>
+           </div>
+           <div class="row">
+               <form method="post" action="#" class="contact-form">
+                   <div class="row">
+                       <div class="col span-1-of-3">
+                           <label for="name">Name</label>
+                       </div>
+                       <div class="col span-2-of-3">
+                           <input type="text" name="name" id="name" placeholder="Your Name" required>
+                       </div>
+                   </div>
+                   <div class="row">
+                       <div class="col span-1-of-3">
+                           <label for="email">Email</label>
+                       </div>
+                       <div class="col span-2-of-3">
+                           <input type="email" name="email" id="email" placeholder="Your Email" required>
+                       </div>
+                   </div>
+                   <div class="row">
+                       <div class="col span-1-of-3">
+                           <label for="find-us">How did you find us?</label>
+                       </div>
+                       <div class="col span-2-of-3">
+                           <select name="find-us" id="find-us">
+                               <option value="null">Choose an Option...</option>
+                               <option value="friends">Friends</option>
+                               <option value="search">Search Engine</option>
+                               <option value="ad">Advertisement</option>
+                               <option value="other">Other</option>
+                           </select>
+                       </div>
+                   </div>
+                    <div class="row">
+                       <div class="col span-1-of-3">
+                           <label for="newsletter">Newsletter?</label>
+                       </div>
+                       <div class="col span-2-of-3">
+                           <input type="checkbox" name="newsletter" id="newsletter" checked>
+                           <label for="newsletter">Yes, please!</label>
+                       </div>
+                   </div>
+                   <div class="row">
+                       <div class="col span-1-of-3">
+                           <label for="message">Drop us a line</label>
+                       </div>
+                       <div class="col span-2-of-3">
+                           <textarea rows="6" cols="50" name="message" id="message" maxlength="1000" placeholder="Your message here"></textarea>
+                       </div>
+                   </div>
+                   <div class="row">
+                       <div class="col span-1-of-3">
+                           <label>&nbsp;</label>
+                       </div>
+                       <div class="col span-2-of-3">
+                           <button type="submit">Submit</button>
+                       </div>
+                   </div>
+               </form>
+           </div>
+       </section>
 
    </body>
 </html>
